terminada função operarRH e ajustadas as demais

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,12 @@
         "tuple": "cpp",
         "type_traits": "cpp",
         "typeinfo": "cpp",
-        "utility": "cpp"
+        "utility": "cpp",
+        "cmath": "cpp",
+        "deque": "cpp",
+        "unordered_map": "cpp",
+        "vector": "cpp",
+        "fstream": "cpp",
+        "functional": "cpp"
     }
 }
